--- a/src/app/stock/stock.page.html
+++ b/src/app/stock/stock.page.html
@@ -47,10 +47,10 @@
                 </div>
                 <div *ngIf="myAlerts !== undefined">
                     <br><br>
-                    <div *ngIf="myAlerts[0].categories.length > 0 ">
+                    <!-- <div *ngIf="myAlerts[0].categories.length > 0 ">
                         <ion-label style="color: #737373;font-size: .8rem;">Generating report ...</ion-label>
                         <ion-progress-bar value="0.25" buffer="0.5"></ion-progress-bar>
-                    </div>
+                    </div> -->
                     <div *ngIf="myAlerts[0].categories.length === 0 ">
                         <ion-text color="dark">You have 0 alerts left</ion-text>
                     </div>
