--- a/src/app/order-stats/order-stats.page.html
+++ b/src/app/order-stats/order-stats.page.html
@@ -15,21 +15,22 @@
 
     <div class="card-main">
         <ion-row style="margin-top: 0px;">
-            <ion-col *ngFor="let month of last3Months.slice().reverse()" style="height: 90px; background-color: var(--ion-color-primary); margin: 15px; border-radius: 25px;" (click)="filterByMonth(month)">
-                <div style="font-size: 12px; text-align: center; padding-top: 10px;">
-                    {{month}}
+            <ion-col [ngClass]="{activeMonth: month.status == 'active'}" *ngFor="let month of last3Months; let i = index" style="height: 70px; background-color: var(--ion-color-primary); margin: 15px; border-radius: 25px;" (click)="filterByMonth(month.month, i)">
+                <div style="font-size: 12px; text-align: center; padding-top: 10px; margin-top: 15px;">
+                    {{month.month}}
                 </div>
-                <div style="font-size: 12px; text-align: center; padding-top: 10px;">
+                <!-- <div style="font-size: 12px; text-align: center; padding-top: 10px;">
                     Total orders
                 </div>
                 <div style="font-size: 12px; text-align: center; padding-top: 10px;">
                     <div *ngIf="active === 'Deliveries'">
-                        <!-- {{ monthDeliveriesCount }} -->
+                        {{ monthDeliveriesCount }}
                     </div>
                     <div *ngIf="active === 'PickPay'">
-                        <!-- {{ monthPickAndCollectCount }} -->
+                        {{ monthPickAndCollectCount }}
                     </div>
-                </div></ion-col>
+                </div> -->
+            </ion-col>
         </ion-row>
 
         
